@@ -1,5 +1,5 @@
 import-globs=*.asm *.asp *.bat *.c++ *.c *.conf *.cpp *.css *.dtd *.h *.htm *.html *.java *.js *.jsc *.jsp *.php *.pl *.pm *.properties *.props *.py *.rb *.sh *.sql *.tcl *.txt *.tex *.vbs *.xml *.xsl *.xslt *.xtp README LICENSE INSTALL CHANGELOG Makefile makefile.jmk
 exclude-dirs=CVS
 exclude-dirs-2.1.0=.svn
-import-globs-2.1.0=*.asax *.aspx *.cmd *.wsf !*.zip !*.class !*~ !*.bak
+import-globs-2.1.0=README* *.asax *.aspx *.cmd *.wsf !*.zip !*.class !*~ !*.bak
 
